Do not track index in set for traces; reduce usage of Offset for files (#327)